// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.wfa.measurement.common.testing;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/common/testing/simple.proto";

option java_package = "org.wfanet.measurement.common.testing";
option java_multiple_files = true;

message DependsOnSimple {
  Simple simple = 1;
  google.protobuf.Timestamp timestamp = 2;

  message Nested {
    int64 nested_int_value = 1;
  }
  Nested nested = 3;

  Sibling sibling = 4;
}

message Sibling {
  int64 sibling_int_value = 1;
}
